# arkham

./: .cirrus.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  SECURITY.md  libarkhamkernel.pc.in  rename_arkham.sh  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.sh
.tx/: config
ci/: lint_imagefile  lint_run.sh  lint_run_all.sh  test_imagefile  test_run_all.sh
cmake/: arkham-build-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  tests.cmake  windows-app.manifest.in
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  arkham-conf.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  p2p-bad-ports.md  (+13 more)
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  optiontests.cpp  optiontests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.cpp  util.h  wallettests.cpp  wallettests.h
src/zmq/: CMakeLists.txt  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h  zmqutil.cpp  zmqutil.h
(+1921 files in other folders)
